--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@councildataproject/cdp-frontend",
+  "name": "@openmontana/cdp-frontend",
   "engines": {
     "node": "16.x",
     "npm": "8.x"
   },
-  "version": "3.1.3",
-  "description": "Front-end tooling library for React components for CDP instance deployments.",
+  "version": "3.1.4",
+  "description": "Front-end tooling library for React components for CDP instance deployments. Fork of @councildataproject/cdp-frontend.",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "browser": "./dist/index.umd.js",
@@ -121,7 +121,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CouncilDataProject/cdp-frontend.git"
+    "url": "git+https://github.com/openmontana/cdp-frontend.git"
   },
   "keywords": [
     "civic technology",
@@ -129,7 +129,7 @@
     "data access"
   ],
   "bugs": {
-    "url": "https://github.com/CouncilDataProject/cdp-frontend/issues"
+    "url": "https://github.com/openmontana/cdp-frontend/issues"
   },
-  "homepage": "https://github.com/CouncilDataProject/cdp-frontend"
+  "homepage": "https://github.com/openmontana/cdp-frontend"
 }
